# self-evolve-ai

./: .gitignore  C99_COMPILER_README.md  CMakeLists.txt  MILESTONE_REPORT.md  PRD.md  PRD_0_1_0_继续推进报告.md  PROJECT_COMPLETION_CONFIRMATION.md  README.md  T3.7_Integration_Verification_Report.md  TASM.md  Tasks_2025-06-30T06-40-57.md  WORK_SUMMARY_prd_0_1_0.md  a.exe.bat  ai_adaptive_framework.c  ai_adaptive_framework.h  ai_learning.h  ai_optimizer.h  aitasker-main.md  aitasker-tcc-cross-build.md  aitasker.md  ast_to_wasm_test  ast_to_wasm_test.c  astc.h  bootstrap.bat  bootstrap.c  bootstrap.h  bootstrap_build.bat  bootstrap_compiler.tasm  bootstrap_complete.bat  bootstrap_evolver1_complete.bat  bootstrap_minimal.bat  bootstrap_test.bat  bootstrapper.tasm  build.bat  build.sh  build0.bat  build0_independent.bat  build0_simple.bat  build_all.bat  build_all_tools.sh  (+314 more)
bootstrap/: astc_assembler_gen1.astc  program_c99_gen1.astc  test.c
bootstrap_test/: tool_astc2native_bootstrap.astc
bootstrap_test.todelete/: test_program.c  tool_c2astc_bootstrap.astc
build_complete/: test_self_hosted.astc  test_self_hosted.c
docs/: API_Reference.md  ARM64_Optimization_Report.md  Development_Guide.md  PRD.md  PRD2.md  Quick_Start_Guide.md  README.md  T2.2_ARM64_Completion_Summary.md  TECHNICAL_SUMMARY.md  Windows_Compatibility_Analysis.md  Windows_Compatibility_Status.md  Windows_Implementation_Plan.md  antivirus_solutions.md  api_documentation.md  astc.h.md  astc_files_audit_report.md  augment.md  bootstrap_improvement_plan.md  c99_implementation_assessment.md  c99_migration_guide.md  c99bin_compatibility_report.md  c_features_scope.md  cross_platform_compatibility_report.md  cursor.md  dependency_cleanup_verification_report.md  development_guide.md  elf.md  evolver0_completion_report.md  extend_c99bin_completion_report.md  gemini.md  loader_audit_report.md  loader_interface_specification.md  module_migration_strategy.md  native_module_format_specification.md  native_modules_audit_report.md  pe.md  phase1_analysis_report.md  pipeline_api_guide.md  plan.md  prd_compliance_gaps_report.md  (+85 more)
examples/: basic_return  basic_return.c  basic_return_c99bin  c99_complex_syntax_test.c  c99_complex_syntax_test_c99bin  c99_error_handling_test.c  c99_error_handling_test_c99bin  c99_features_test.c  c99_features_test_c99bin  c99_stdlib_test.c  c99_stdlib_test_c99bin  hello_world  hello_world.c  hello_world_c99bin  hello_world_tcc.astc  multi_printf.c  multi_printf_c99bin  performance_test.c  performance_test_c99bin  simple_hello.c  simple_hello_c99bin  simple_hello_cc  simple_hello_fixed  test_c99.astc  test_c99.c  test_c99_c99bin  test_program  test_program.astc  test_program.c  test_program_c99bin  ultra_simple  ultra_simple.c  ultra_simple_c99bin
helpers/: analyze_ui_types.py  analyze_vscode_content.py  auto_continue.py  intelligent_vscode_solution.py  maestro.md  simple_auto.py  smart_vscode_manager.py  vscode_auto_manager.py  vscode_content_interpreter.py
helpers/maestro/: README.md  analyze_augment.py  analyze_stdout.py  assistant_manager.py  auto_task.py  demo.py  final_vscode_test.py  improved_vscode_test.py  interact_with_augment.py  maestro.py  maestro_cli.py  maestro_core.py  pyproject.toml  requirements.txt  setup.py  task_manager.py  test_fixed_screen_capture.py  test_screen_capture.py  test_specific_vscode.py  test_vscode_interaction.py
helpers/maestro/maestro/: __init__.py  __main__.py  web_server.py
helpers/maestro/maestro/cli/: __init__.py  main.py
helpers/maestro/maestro/core/: __init__.py  input_controller.py  process_manager.py  ui_detector.py  ui_types.py  window_capture.py  window_monitor.py
helpers/maestro/maestro/platform/: __init__.py  base.py  fixed_screen_capture.py  input_controller.py  macos.py  macos.py.bak  macos_screen_capture_patch.py  screen_capture_fix.py  window_capture.py  windows.py
helpers/ui_ctrl_v2/: README.md  __init__.py  cli.py  input_controller.py  notes.md  pyproject.toml  requirements.txt  setup.py  test_capture.py  test_window.py  ui_detector.py  ui_types.py  window_capture.py  window_monitor.py
helpers/ui_ctrl_v2/ui_ctrl_v2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
include/: stdio.h  stdlib.h  string.h
resources/: manifest.xml  version.rc.in
scripts/: arm64_performance_optimizer.sh  build_cross_platform.sh  build_macos.sh  build_safe.bat  deploy_c99_replacement.sh  platform_config.sh  platform_detect.sh  test_build.bat  verify_windows_compatibility.sh
src/: c99_program.c  c99_runtime.c  enhanced_loader.c  enhanced_runtime_with_libc.c  evolution_strategy.h  evolver0.c  evolver0_program.c  evolver0_runtime.c  layer2b_test.c  libc_x64_64_native.c  loader_simple.c.todelete  loader_unified.c  module_call_optimizer.c  simple_runtime.c  test_framework.c  test_framework.h  test_module.c  tool_astc2native.c  tool_astc2rt.c  tool_c2astc.c  tool_c2astc.c.astc  tool_pe2rt.c  tool_rt_builder.c  universal_loader.c  universal_loader.c.todelete  utils.c  utils.h  vm_x64_64_native.c
temp_tcc/: CodingStyle  Makefile  USES  arm-link.c  arm64-gen.c  arm64-link.c  config.h  config.mak  dwarf.h  elf.h  i386-gen.c  i386-link.c  il-gen.c  libtcc.c  riscv64-asm.c  riscv64-link.c  riscv64-tok.h  tcc.c  tcccoff.c  tccmacho.c  tccpe.c  tccrun.c  tcctok.h  x86_64-link.c
tests/: FINAL_FIX_SUMMARY.md  PRD_PROGRESS_ASSESSMENT.md  TEST_SUMMARY_REPORT.md  automated_compiler_tests.c  basic_end_to_end_test.astc  basic_end_to_end_test.c  c99_compliance_test.sh  c99_features_test.c  c99_program_self_hosted_v2.astc  callchain_test.astc  callchain_test.c  callchain_test.rt  code_quality_analysis.sh  codegen_optimization_test.astc  codegen_optimization_test.c  complete_cycle_test.astc  complete_cycle_test.c  complete_cycle_test.native  comprehensive_end_to_end_test.c  core_test_framework.c  core_test_framework.h  core_test_main.c  debug_ast_structure.c.todelete  debug_ast_types.c  debug_astc.c  debug_astc_full.c  debug_astc_runtime.c  debug_astc_runtime.c.astc  debug_astc_runtime_fixed.astc  debug_astc_serialization.c  debug_astc_serialization.c.todelete  (+472 more)
(+666 files in other folders)
