[project]
name = "maestro"
version = "0.1.0"
description = "Windows session manager and controller"
authors = [
    {name = "Your Name",email = "your.email@example.com"}
]
readme = "README.md"
requires-python = "^3.8"
dependencies = [
    "typer (>=0.16.0,<0.17.0)",
    "pywin32 (>=310,<311)",
    "pillow (>=11.3.0,<12.0.0)",
    "numpy (>=2.3.1,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
