[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maestro"
version = "0.2.0"
authors = [
    { name = "AI Team", email = "ai.team@example.com" }
]
description = "Maestro - Advanced UI Control and Automation System"
requires-python = ">=3.8"
dependencies = [
    "ultralytics>=8.1.0",
    "huggingface-hub>=0.20.3",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "pywin32>=306",
    "opencv-python>=4.8.0",
    "pynput>=1.7.6",
    "keyboard>=0.13.5"
]

[project.scripts]
maestro = "maestro.cli.main:main" 