[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ui_ctrl_v2"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
description = "UI Control System V2 with YOLO and OmniParser"
requires-python = ">=3.8"
dependencies = [
    "ultralytics>=8.1.0",
    "huggingface-hub>=0.20.3",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "pywin32>=306",
    "opencv-python>=4.8.0"
]

[project.scripts]
ui-ctrl = "ui_ctrl_v2.cli:main" 